extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=5f7137bfec5d74dee409
+github.client.secret=b3f29159aa8b167ab2c98bddb76f6164bb1733a1
+github.redirect.uri=http://localhost:8887/callback
